--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "jimp": "0.16.1",
     "puppeteer": "13.5.1"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/echb/robot-post.git"
+  },
+  "bugs": {
+    "url": "https://github.com/echb/robot-post/issues"
+  },
+  "homepage": "https://github.com/echb/robot-post#readme"
 }
